--- a/styles.css
+++ b/styles.css
@@ -135,3 +135,17 @@ body {
   .add-form-button:hover {
     opacity: 0.9;
   }
+
+  .input {
+    font-size: 16px;
+    font-family: Helvetica;
+    border-radius: 8px;
+    border: none;
+  }
+
+  .input {
+    width: 500px;
+    margin-top: 12px;
+    padding: 15px;
+    resize: none;
+  }
