--- a/styles.css
+++ b/styles.css
@@ -149,3 +149,23 @@ body {
     padding: 15px;
     resize: none;
   }
+
+  .button {
+    margin-top: 24px;
+    font-size: 20px;
+    padding: 10px 20px;
+    background-color: #bcec30;
+    border: none;
+    border-radius: 18px;
+    cursor: pointer;
+  }
+  
+  .button-reg {
+    margin-top: 24px;
+    font-size: 20px;
+    padding: 10px 20px;
+    background-color: #bcec30;
+    border: none;
+    border-radius: 18px;
+    cursor: pointer;
+  }
